# pac_extract

./: .gitignore  LICENSE  LICENSES-THIRD-PARTY.md  README.md  Test.csv  combined_checkov.py  combined_regula.py  combined_terrascan.py  combined_tfsec.py  iac_extract.py  iac_extract.spec  kics.csv  old_readme.md  pac_extract.py  pyproject.toml  requirements.txt  shit.csv  temp.py  to_do.md  version_info.json
not_used/: get_kics_by_url.py
pac_database/Checkov/: Checkov_db.csv
pac_database/KICS/: KICS_db.csv
pac_database/MASTER/: MASTER_db.csv
pac_database/Terrascan/: Terrascan_db.csv
pac_database/Trivy/: Trivy_db.csv
pac_raw/: .version_token.flag
pac_raw/KICS/: all_queries.csv
src/: app.py  app_script.py  script.py
src/fetch_pac/: parse_tool.py
src/fetch_pac/tool_parsers/: get_checkov.py  get_kics.py  get_terrascan.py  get_trivy.py
src/init_setup/: setup_base.py  setup_data.py  setup_integrity.py  setup_parser.py  setup_save_master.py
src/init_setup/setup_url/: setup_kics.py
src/parse_pac/: get_checkov.py  get_kics.py  get_prisma.py  get_terrascan.py  get_trivy.py  parse_tool.py
src/setup/: setup_base.py  setup_data.py  setup_integrity.py  setup_parser.py
src/setup/setup_url/: setup_kics.py
