[project]
name = "pac-extract"
version = "1.0.0"
description = "Program that extracts PaC(Policy as Code) files from the most popular open-source IaC(Infrastructure as Code) scanning tools. Used to guide DevOps engineers on which policies are standardized and how they are written."
authors = [
    {name = "Calvin(Hyunsoo) Yang | 양현수"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"